# sample-project

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
src/: main.cpp
